# jfcli

./: README.md  setup.cfg
src/jfcli/: __init__.py  jfcli.py
