[metadata]
name = jfcli-joshuaboniface
version = 0.0.1
author = Joshua Boniface
author_email = joshua@boniface.me
description = A CLI administration tool for Jellyfin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshuaboniface/jfcli
project_urls =
    Bug Tracker = https://github.com/joshuaboniface/jfcli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
